--- a/Javascript/1-VARIABLES/Diseur de bonne aventure/index.html
+++ b/Javascript/1-VARIABLES/Diseur de bonne aventure/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
   <h1>Javascript </h1>
-  <script src="exo.js" type="text/javascript"></script>
+  <script src="exo1.js" type="text/javascript"></script>
 </body>
 </html>
