--- a/Javascript/1-VARIABLES/Priorité/index.html
+++ b/Javascript/1-VARIABLES/Priorité/index.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Exercice 1 javascript</title>
+  <title>Exercice 4 javascript</title>
 </head>
 <body>
   <h1>Javascript </h1>
-  <script src="exo.js" type="text/javascript"></script>
+  <script src="exo4.js" type="text/javascript"></script>
 </body>
 </html>
