--- a/Javascript/07-MATHS/index.html
+++ b/Javascript/07-MATHS/index.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Exercice 5 javascript</title>
+  <title>Exercice 7 javascript</title>
 </head>
 <body>
-  <h1> Javascript Tableau </h1>
+  <h1> Javascript math </h1>
   <script src="exo.js" type="text/javascript"></script>
 </body>
 </html>
